# supplementary_files

./: .gitignore  Dockerfile  README.md  README.rst  Vagrantfile  provision.sh  pyproject.toml  requirements.del  requirements.txt.dev  setup.cfg
.devcontainer/: Dockerfile  base.Dockerfile  devcontainer.json
docs/: conf.py
lessons/lesson01/extras/: classes.py  dictionaries.py  oo.py
lessons/lesson02/: log_snoop.py
lessons/lesson03/: 03_video00.md  03_video01_schema.csv  03_video04.md  03_video04.py  03_video06.md  lesson03_notes.md
lessons/lesson03/class_content/: 03_video02.md  03_video03.md  03_video03.py
lessons/lesson04/extras/: fp.md  fp_background.md  oo_vs_fp.py
lessons/lesson05/extras/: pyt_fix.py
lessons/lesson06/extras/: alice.py  alice_ut.py  cond_dir.py  poor_perf.py
lessons/lesson07/class_content/: multi.py
lessons/lesson08/extras/: decor.py
lessons/lesson09/extras/: context_mgr.py  metaclass.py
lessons/lesson10/: 10_video01.md
lessons/lesson10/content/: server.py
src/project/lessons/lesson01/extras/: math.py  users.py
src/project/lessons/lesson03/extras/: inmem.py  people.db
src/project/lessons/lesson04/extras/: empty_iter.py
src/project/lessons/lesson05/extras/: decor.py  mongodb.py
src/project/lessons/lesson05_demo/: README.rst  run_html_render.py
src/project/lessons/lesson06/extras/: alice.py  cond_dir.py  cond_dir_snoop.py  dbms.db
src/py220_supplemental/lessons/lesson05_demo/: html_render.py  test_html_render.py
src/py220_supplemental/lessons/lesson10/: nb.ipynb
tests/: test_ex.py
(+42 files in other folders)
